Dockerizing the code of Harvest problem